# Booking-Management-System

./: README.md
bms-backend-main/: README.md  pyproject.toml
bms-backend-main/src/: main.py
bms-backend-main/src/models/: models.py
bms-frontend-main/: api-server.ts  tailwind.config.ts
bms-frontend-main/src/app/: Svgs.tsx  layout.tsx  page.css  page.tsx
bms-frontend-main/src/app/confirm-booking/: page.tsx
bms-frontend-main/src/app/rewards/: page.css  page.tsx
bms-frontend-main/src/app/search/: page.tsx
bms-frontend-main/src/app/showings/: page.tsx
bms-frontend-main/src/components/: Booking.tsx  Carousel.jsx  CircleProgress.jsx  Content.tsx  Footer.tsx  Highlight.tsx  Layout.tsx  LocationComponent.tsx  MovieCalender.tsx  ShowingCard.jsx
csci-p465-team-6-bms-backend-main/src/database/: database.py
csci-p465-team-6-bms-backend-main/src/dto/: base.py
csci-p465-team-6-bms-backend-main/src/models/: apply_schema_changes.py
csci-p465-team-6-bms-backend-main/src/query/: movies_query.py
csci-p465-team-6-bms-frontend-main/: package.json
csci-p465-team-6-bms-frontend-main/src/app/: globals.css
csci-p465-team-6-bms-frontend-main/src/app/api/payment/: route.ts
csci-p465-team-6-bms-frontend-main/src/app/api/shows/: route.ts
csci-p465-team-6-bms-frontend-main/src/app/booking/[bookingId]/: page.tsx
csci-p465-team-6-bms-frontend-main/src/app/profile/: page.tsx
csci-p465-team-6-bms-frontend-main/src/components/: BookingUserInfo.tsx  CarouselItem.jsx  MiniLoader.tsx  MovieCard.jsx  NavBar.tsx  OrderCard.jsx  SearchBar.jsx  Seats.tsx  ViewTicket.tsx
